<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_art3"
        tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content"
                  tools:ignore="MissingConstraints">
        <TextView android:layout_width="match_parent"
                  android:text="Struktur C++"
                  android:textSize="30dp"
                  android:fontFamily="casual"
                  android:gravity="center"
                  android:textColor="#FFFBFB"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="70dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/struktur1"
                    android:textColor="#F7FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginBottom="12dp"/>
            <ImageView
                    android:layout_gravity="center"
                    android:layout_width="300sp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/struktur1"/>

            <TextView

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif"
                    android:layout_height="wrap_content"
                    android:text="@string/struktur2"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:layout_marginBottom="12dp"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur3"
                      android:fontFamily="sans-serif"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur4"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur5"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur6"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur5"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur7"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="// baris komentar "
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="/* blok komentar */ "
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/include"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur10"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="int main()"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif-black"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur11"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="main()"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif-black"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur12"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <ImageView android:layout_width="244dp"
                       android:layout_height="wrap_content"
                       android:src="@drawable/cout"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur13"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur14"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="monospace"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur15"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur16"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>
            <ImageView android:layout_width="300dp"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:src="@drawable/struktur2"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/struktur17"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:textColor="#FFFFFF"
                      android:fontFamily="sans-serif"
                      android:textSize="20dp"
                      android:layout_marginBottom="12dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>